Fixed menu responsive issues. Did not work on iphone 5 as bottom allowed scrolling. Reviewed menu SASS amd moved media queries to menu. Updated menu photos to reflect same as social media. Changes by Daniel Philip Johnson

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -15,33 +15,33 @@
 // Tablets & Small Laptops
 @include mediaMd {
 
-  .menu-nav,
-  div.menu-branding {
-    float: none;
-    width: 100%;
-    min-height: 0;
+  // .menu-nav,
+  // div.menu-branding {
+  //   float: none;
+  //   width: 100%;
+  //   min-height: 0;
 
-    &.show {
-      transform: translate3d(0, 0, 0);
-    }
-  }
+  //   &.show {
+  //     transform: translate3d(0, 0, 0);
+  //   }
+  // }
 
-  .menu-nav {
-    height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-    font-size: 24px;
-  }
+  // .menu-nav {
+  //   height: 75vh;
+  //   transform: translate3d(-100%, 0, 0);
+  //   font-size: 24px;
+  // }
 
-  .menu-branding {
-    height: 25vh;
-    transform: translate3d(100%, 0, 0);
+  // .menu-branding {
+  //   height: 25vh;
+  //   transform: translate3d(100%, 0, 0);
 
-    .portrait {
-      background: url("../../img/profile-sm.png");
-      width: 150px;
-      height: 150px;
-    }
-  }
+  //   .portrait {
+  //     background: url("../../img/profile-sm.png");
+  //     width: 150px;
+  //     height: 150px;
+  //   }
+  // }
 
   .about-info {
     grid-template-areas:
